<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".DetailDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/rounded_bg">
        <TextView
            android:id="@+id/detail_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:textSize="25dp"
            android:text="@string/jdl"/>
        <TextView
            android:id="@+id/detail_tanggal"
            android:layout_below="@+id/detail_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp"
            android:text="@string/tgl"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/detail_note"
            android:layout_below="@+id/detail_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/note"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</RelativeLayout>