<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp"
    android:id="@+id/cardview_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tview_id"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/no_note"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nomor"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorBlue"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/jdl_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/jdl"/>

                <TextView
                    android:id="@+id/tgl_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/tgl"/>

                <TextView
                    android:id="@+id/isi_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi"
                    android:textSize="15dp"
                    android:maxLines="3"
                    android:ellipsize="end"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>